<!--
  Copyright (C) 2014 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<com.android.calculator2.view.CalculatorPadLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pad_numeric"
    style="@style/PadLayoutStyle.Numeric"
    android:columnCount="4"
    android:rowCount="5">

    <Button
        android:id="@+id/change_port"
        style="@style/PadButtonStyle.Numeric"
        android:onClick="onButtonClick"
        android:text="@string/change_orientation" />

    <Button
        android:id="@+id/clr"
        style="@style/PadButtonStyle.Numeric"
        android:contentDescription="@string/desc_clr"
        android:onClick="onButtonClick"
        android:text="@string/clr_c" />

    <Button
        android:id="@+id/del"
        style="@style/PadButtonStyle.Numeric"
        android:contentDescription="@string/desc_del"
        android:onClick="onButtonClick"
        android:text="@string/del_y" />

    <Button
        android:id="@+id/op_div"
        style="@style/PadButtonStyle.Numeric"
        android:contentDescription="@string/desc_op_div"
        android:onClick="onButtonClick"
        android:text="@string/op_div" />

    <Button
        android:id="@+id/digit_7"
        style="@style/PadButtonStyle.Numeric"
        android:onClick="onButtonClick"
        android:text="@string/digit_7" />

    <Button
        android:id="@+id/digit_8"
        style="@style/PadButtonStyle.Numeric"
        android:onClick="onButtonClick"
        android:text="@string/digit_8" />

    <Button
        android:id="@+id/digit_9"
        style="@style/PadButtonStyle.Numeric"
        android:onClick="onButtonClick"
        android:text="@string/digit_9" />

    <Button
        android:id="@+id/op_mul"
        style="@style/PadButtonStyle.Numeric"
        android:contentDescription="@string/op_mul"
        android:onClick="onButtonClick"
        android:text="@string/op_mul" />

    <Button
        android:id="@+id/digit_4"
        style="@style/PadButtonStyle.Numeric"
        android:onClick="onButtonClick"
        android:text="@string/digit_4" />

    <Button
        android:id="@+id/digit_5"
        style="@style/PadButtonStyle.Numeric"
        android:onClick="onButtonClick"
        android:text="@string/digit_5" />

    <Button
        android:id="@+id/digit_6"
        style="@style/PadButtonStyle.Numeric"
        android:onClick="onButtonClick"
        android:text="@string/digit_6" />

    <Button
        android:id="@+id/op_sub"
        style="@style/PadButtonStyle.Numeric"
        android:contentDescription="@string/desc_op_sub"
        android:onClick="onButtonClick"
        android:text="@string/op_sub" />

    <Button
        android:id="@+id/digit_1"
        style="@style/PadButtonStyle.Numeric"
        android:onClick="onButtonClick"

        android:text="@string/digit_1" />

    <Button
        android:id="@+id/digit_2"
        style="@style/PadButtonStyle.Numeric"
        android:onClick="onButtonClick"
        android:text="@string/digit_2" />

    <Button
        android:id="@+id/digit_3"
        style="@style/PadButtonStyle.Numeric"
        android:onClick="onButtonClick"
        android:text="@string/digit_3" />

    <Button
        android:id="@+id/op_add"
        style="@style/PadButtonStyle.Numeric"
        android:contentDescription="@string/desc_op_add"
        android:onClick="onButtonClick"
        android:text="@string/op_add" />

    <Button
        android:id="@+id/donw"
        style="@style/PadButtonStyle.Numeric"
        android:onClick="onButtonClick"
        android:text="@string/scroll_drow" />



    <Button
        android:id="@+id/digit_0"
        style="@style/PadButtonStyle.Numeric"
        android:onClick="onButtonClick"
        android:text="@string/digit_0" />

    <Button
        android:id="@+id/dec_point"
        style="@style/PadButtonStyle.Numeric"
        android:onClick="onButtonClick"
        android:text="@string/dec_point" />

    <Button
        android:id="@+id/eq"
        style="@style/PadButtonStyle.Numeric.Equals"
        android:contentDescription="@string/desc_eq"
        android:onClick="onButtonClick"
        android:text="@string/eq" />

</com.android.calculator2.view.CalculatorPadLayout>
